Minor design tweaks

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>hammerspace - Making web based experiences</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#FF9957">
+    <meta name="theme-color" content="#222222">
 
     <meta property="og:site_name" content="hammerspace" />
     <meta property="og:title" content="hammerspace - Making web based experiences" />
@@ -75,6 +75,7 @@
         .main-area {
             max-width: 768px;
             margin: 32px auto;
+            padding: 0 8px;
         }
         .section {
             margin-top: 32px;
