--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
-    <title>hammerspace - Making web based experiences</title>
+    <title>Hammerspace - Making web based experiences</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#222222">
 
@@ -13,7 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Making web based experiences" />
 
-    <link rel="canonical" href="http://www.isinanalytics.com/" />
+    <link rel="canonical" href="https://www.hammerspace.co.uk/" />
     <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:100" rel="stylesheet">
     <style>
         html {
