--- a/index.html
+++ b/index.html
@@ -8,31 +8,32 @@
 
     <meta property="og:site_name" content="hammerspace" />
     <meta property="og:title" content="hammerspace - Making web based experiences" />
-    <meta property="og:url" content="http://www.hammerspace.co.uk/" />
+    <meta property="og:url" content="https://www.hammerspace.co.uk/" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Making web based experiences" />
 
     <link rel="canonical" href="https://www.hammerspace.co.uk/" />
-    <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:100" rel="stylesheet">
     <style>
         html {
             height:100%;
         }
         body {
-            background: #222;
-            color: #fff;
+            background: #fff;
+            color: #222;
             padding: 0;
             margin: 0;
-            font-family: 'Arima Madurai', sans-serif;
+            font-family: sans-serif;
             font-weight: lighter;
             min-height:100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        }
+        img {
+            width: 100%;
         }
         .page {
             width: 100%;
             max-width: 768px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         h1, p {
@@ -45,7 +46,7 @@
         a,
         a:link,
         a:visited {
-            color: #fff;
+            color: #222;
         }
         a:hover,
         a:active,
@@ -56,14 +57,12 @@
 
         .heading-wrap {
             text-align: center;
+            padding: 16px;
+            background: #222;
+            margin: 0 0 32px 0;
         }
         .heading {
             display: inline-block;
-            margin: 32px auto;
-            padding: 16px;
-            border-bottom: solid 2px #900;
-            border-top: solid 2px #900;
-            animation: COLORS 30s infinite;
         }
         .heading h1 {
             text-align: center;
@@ -77,71 +76,77 @@
             padding: 0 8px;
         }
         .section {
-            margin-top: 32px;
-            transform: rotate(-3deg);
+            margin-top: 64px;
         }
         .section__head {
-            border-bottom: solid 2px #900;
-            animation: COLORS 30s infinite;
             margin-bottom: 16px;
         }
-        @keyframes COLORS {
-            0% {
-                border-color: #900;
-            }
-            16.6% {
-                border-color: #990;
-            }
-            33.3% {
-                border-color: #090;
-            }
-            50% {
-                border-color: #099;
-            }
-            66.6% {
-                border-color: #009;
-            }
-            83.3% {
-                border-color: #909;
-            }
-            100% {
-                border-color: #900;
-            }
+        .list {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+        .list li {
+            width: 100%;
+            max-width: 120px;
+            display: inline-block;
+            margin-right: 16px;
+            vertical-align: top;
+        }
+        .project, .developer {
+            text-align: center;
+        }
+        .project__image, .developer__image {
+            margin-bottom: 8px;
+        }
+        .project__name, .developer__name {
+            display: block;
+            text-align: center;
+        }
+        .developer__image {
+            border-radius: 100%;
         }
     </style>
 <body>
-<div class="page">
 <div class="heading-wrap">
+    <div class="page">
     <div class="heading">
-        <h1>hammerspace.co.uk</h1>
-        <p>...of the web</p>
+        <h1>
+            <img src="logo.svg" alt="Hammerspace" class="logo" />
+        </h1>
+    </div>
     </div>
 </div>
+<div class="page">
 <div class="main-area">
-<div class="section">
-    <h2 class="section__head">Contact</h2>
-    <ul>
-        <li>E-mail: <a href="mailto:contact@hammerspace.co.uk">contact@hammerspace.co.uk</a>
-        </li>
-    </ul>
-</div>
+<p>
+    Building experiences that are <strong>of</strong> the web. Established 2017. Much more to come...<br />
+    Contact:  <a href="mailto:contact@hammerspace.co.uk">contact@hammerspace.co.uk</a>
+</p>
 <div class="section">
     <h2 class="section__head">Projects</h2>
-    <ul>
+    <ul class="list">
         <li>
-            <a href="https://tubealert.co.uk">Tube Alert</a>
+            <a href="https://tubealert.co.uk" class="project">
+                <img src="tubealert.png" alt="Tube Alert logo" class="project__image" />
+                <span class="project__name"> Tube Alert</span>
+            </a>
+        </li>
+        <li>
+            More to come..
         </li>
     </ul>
 </div>
-<div class="section">
-    <h2 class="section__head">Developers</h2>
-    <ul>
-        <li>
-            <a href="http://rland.me.uk">David Marland</a>
-        </li>
-    </ul>
 </div>
 </div>
-</div>
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-96252214-1', 'auto');
+    ga('send', 'pageview');
+</script>
 </body>
 </html>
