Convert to Jekyll and add styles

--- a/_drafts/tube-alert/__remove__index.html
+++ b/_drafts/tube-alert/__remove__index.html
@@ -98,7 +98,7 @@
 </p>
 
 <p>
-    <img src="tubealertoriginalschema.svg" alt="Tube Alert Schema" />
+    <img src="../../assets/tube-alert/tubealertoriginalschema.svg" alt="Tube Alert Schema" />
 </p>
 
 <h3>Line</h3>
@@ -152,7 +152,7 @@
     This happens every minute on a Cron job.
 </p>
 <p>
-    <img src="tubealertminute.svg" alt="Workflow for fetching data every minute" />
+    <img src="../../assets/tube-alert/tubealertminute.svg" alt="Workflow for fetching data every minute" />
 </p>
 <p>
     Overall, the data is fetched and stored, and if a status has changed the subscribers are informed.
@@ -171,7 +171,7 @@
     an hourly Cron job at 1 minute past the hour.
 </p>
 <p>
-    <img src="tubealerthour.svg" alt="Workflow for fetching data every hour" />
+    <img src="../../assets/tube-alert/tubealerthour.svg" alt="Workflow for fetching data every hour" />
 </p>
 
 <h3>Subscribing</h3>
@@ -244,7 +244,7 @@
     This works and shows the list of lines, with those currently disrupted shown by an <strong>X</strong>
 </p>
 <p>
-    <img src="1st-site.png" alt="The first, very basic version of TubeAlert" />
+    <img src="../../assets/tube-alert/1st-site.png" alt="The first, very basic version of TubeAlert" />
 </p>
 
 <h2 id="react">Building a basic webpage with React on S3</h2>
